--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login with Square</title>
-
 <script>
 function getAuthorizationCodeFromUrl() {
   const urlParams = new URLSearchParams(window.location.search);
-  return urlParams.get("code");
+  return urlParams.get('code');
 }
 
 function loginWithSquare() {
   const authUrl =
     "https://mcp.squareup.com/authorize" +
-    "?client_id=gjxgLkmUnkj07yeG" +
-    "&redirect_uri=" + encodeURIComponent("http://127.0.0.1:3000/callback") +
+    "?client_id=4RyTgR2EVMbRKlfD" +
+    "&redirect_uri=" + encodeURIComponent("https://127.0.0.1") +
     "&response_type=code" +
     "&code_challenge=HXBGwnUh-mSZyngCxMRhMwpckOvTne1keIm-WYH_-oU" +
     "&code_challenge_method=S256";
@@ -30,41 +29,29 @@ async function getAccessToken(code) {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ code })
     });
-
     const data = await res.json();
-    document.getElementById("authorization-code").textContent =
-      "Access Token Processed";
-    document.getElementById("user-info").textContent =
-      JSON.stringify(data, null, 2);
-
+    document.getElementById("authorization-code").textContent = "Access Token Processed";
+    document.getElementById("user-info").textContent = JSON.stringify(data, null, 2);
   } catch (err) {
-    document.getElementById("authorization-code").textContent =
-      "Error: " + err;
+    document.getElementById("authorization-code").textContent = "Error: " + err;
   }
 }
 
 window.onload = () => {
   const code = getAuthorizationCodeFromUrl();
-
   if (!code) {
     loginWithSquare();
     return;
   }
-
-  document.getElementById("authorization-code").textContent =
-    "Authorization Code: " + code;
-
+  document.getElementById("authorization-code").textContent = "Authorization Code: " + code;
   getAccessToken(code);
 };
 </script>
 </head>
-
 <body>
 <h1>Login with Square</h1>
 <button onclick="loginWithSquare()">Login</button>
-
 <p id="authorization-code"></p>
-
 <h2>User Information</h2>
 <pre id="user-info"></pre>
 </body>
