--- a/public/index.html
+++ b/public/index.html
@@ -20,37 +20,34 @@ function loginWithSquare() {
     "&code_challenge=HXBGwnUh-mSZyngCxMRhMwpckOvTne1keIm-WYH_-oU" +
     "&code_challenge_method=S256";
 
-  window.open(
-    authUrl,
-    "SquareOAuth",
-    "width=600,height=800"
-  );
+  window.open(authUrl, "SquareOAuth", "width=600,height=800");
 }
 
 async function exchangeCode() {
   const code = document.getElementById("auth-code").value.trim();
+  if (!code) return alert("Authorization code required");
 
-  if (!code) {
-    alert("Authorization code required");
-    return;
-  }
+  const res = await fetch("/exchange", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ code })
+  });
 
-  try {
-    const res = await fetch("/exchange", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ code })
-    });
+  const data = await res.json();
+  document.getElementById("authorization-code").textContent =
+    "Access Token Generated";
 
-    const data = await res.json();
-    document.getElementById("authorization-code").textContent =
-      "Access Token Processed";
-    document.getElementById("user-info").textContent =
-      JSON.stringify(data, null, 2);
-  } catch (err) {
-    document.getElementById("authorization-code").textContent =
-      "Error: " + err;
-  }
+  document.getElementById("user-info").textContent =
+    JSON.stringify(data, null, 2);
+
+  document.getElementById("run-mcp-btn").disabled = false;
+}
+
+async function runMcp() {
+  const res = await fetch("/run-mcp", { method: "POST" });
+  const data = await res.json();
+  document.getElementById("user-info").textContent =
+    JSON.stringify(data, null, 2);
 }
 
 window.onload = () => {
@@ -82,7 +79,13 @@ window.onload = () => {
 
 <button onclick="exchangeCode()">Exchange Code</button>
 
-<h2>User Information</h2>
+<br><br>
+
+<button id="run-mcp-btn" onclick="runMcp()" disabled>
+  Send Request
+</button>
+
+<h2>Output</h2>
 <pre id="user-info"></pre>
 
 </body>
